--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <title>GameHub</title>
 </head>
 <body>
+    <div class="hide-drop-shadow"></div>
     <svg class="curved-background1" xmlns="http://www.w3.org/2000/svg" width="3440" height="750" viewBox="0 0 3440 750" fill="none">
         <path class="curved-shadow" d="M0 7.41606e-05H3440V531.99C3440 
         531.99 2816.27 750.263 2310 750C1805.21 
